--- a/pom.xml
+++ b/pom.xml
@@ -8,15 +8,13 @@
     <dependencies>
         <dependency>
             <groupId>org.apache.jena</groupId>
-            <artifactId>apache-jena</artifactId>
+            <artifactId>jena-tdb</artifactId>
             <version>3.0.1</version>
-            <type>zip</type>
         </dependency>
         <dependency>
             <groupId>org.apache.jena</groupId>
-            <artifactId>apache-jena-libs</artifactId>
+            <artifactId>jena-sdb</artifactId>
             <version>3.0.1</version>
-            <type>pom</type>
         </dependency>
     </dependencies>
     <properties>
